# ledger-desktop

./: Cargo.toml  README.md  TODO.txt
crates/ledger-cli/: Cargo.toml
crates/ledger-cli/src/: lib.rs
crates/ledger-desktop/: Cargo.toml
crates/ledger-desktop/src/: main.rs
src/: accounts.rs  ledger.rs  main.rs  sexpr.rs  transactions.rs  ui.rs
src/fixtures/: jornal.ledger
src/ui/: accounts_tree.rs  balance_chart.rs  components.rs  dropdown_tree.rs  file.rs  state.rs  transactions_register.rs
src/ui/components/: checkbox.rs
src/ui/file/: accounts_tree.rs  state.rs  transactions_register.rs
