[package]
name = "ledger-desktop"
description = "Desktop app for the ledger cli"
publish = false
authors = ["Nikita Galaiko <nikita@galaiko.rocks>"]
edition = "2021"
repository = "https://github.com/ngalaiko/ledger-desktop"
license = "GPL-3.0-only"

[dependencies]
futures-lite = "2.6.1"
async-process = "2.5.0"
async-channel = "2.5.0"
async-io = "2.6.0"

gpui = "0.2.2"
gpui-component = "0.4.0"
anyhow = "1.0.100"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
perf = "deny"
correctness = "deny"
complexity = "deny"
style = "deny"
pedantic = "deny"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
