[package]
name = "ledger-cli"
description = "Desktop app for the ledger cli"
publish = false
authors = ["Nikita Galaiko <nikita@galaiko.rocks>"]
edition = "2021"
repository = "https://github.com/ngalaiko/ledger-desktop"
license = "GPL-3.0-only"

[dependencies]
futures.workspace = true

anyhow.workspace = true
portable-pty = "0.9.0"
tokio = { version = "1", features = ["sync"] }

[lints]
workspace = true
